/resources/scss/: fixed bug where search string would overflow from the "not found" box in search page

--- a/resources/scss/pmp.scss
+++ b/resources/scss/pmp.scss
@@ -596,6 +596,8 @@ body {
 .pmp-search-not-found {
     @extend .pmp-page-content-box-content;
 
+    overflow: hidden;
+
     text-align: center;
 
     p {
